# demo-Python-FastAPI

./: .dockerignore  .env.live  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
tests/: test_main.py
