[project]
name = "demo-python-fastapi"
version = "1.0.0"
description = "Demo FastAPI project using uv"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.2.1"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
